RESOLVED FIXED136513
Fix a few leftovers from removing MIME-related WKSI usage
https://bugs.webkit.org/show_bug.cgi?id=136513
Summary Fix a few leftovers from removing MIME-related WKSI usage
Maciej Stachowiak
Reported 2014-09-03 16:08:19 PDT
Fix a few leftovers from removing MIME-related WKSI usage
Attachments
Patch (3.41 KB, patch)
2014-09-03 16:08 PDT, Maciej Stachowiak
no flags
Version that actually compiles (3.68 KB, patch)
2014-09-03 17:25 PDT, Maciej Stachowiak
ap: review+
Maciej Stachowiak
Comment 1 2014-09-03 16:08:50 PDT
Maciej Stachowiak
Comment 2 2014-09-03 17:25:33 PDT
Created attachment 237604 [details] Version that actually compiles
Maciej Stachowiak
Comment 3 2014-09-03 19:56:43 PDT
Note You need to log in before you can comment on or make changes to this bug.