Fix a few leftovers from removing MIME-related WKSI usage https://bugs.webkit.org/show_bug.cgi?id=136513

Reviewed by Alexey Proskuryakov.

* WebCore.exp.in:
* WebCore.order:
* platform/ios/WebCoreSystemInterfaceIOS.mm:
* platform/mac/WebCoreSystemInterface.mm:


Canonical link: https://commits.webkit.org/154313@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173249 268f45cc-cd09-0410-ab3c-d52691b4dbfc